--- a/am-shared/topdir-include.am
+++ b/am-shared/topdir-include.am
@@ -47,11 +47,11 @@ dictionary.default.hfst: temporary.phon.hfst
 		$(HFST_MINIMIZE) $(HFST_FLAGS) |\
 		$(HFST_FST2FST) $(HFST_FLAGS) -f olw -o $@
 
-index.xml: $(GTCORE)/scripts/index.xml.template
-	sed -e "s_DATE_`date`_" -e "s/GTLANG2/$(GTLANG2)/" < $< > $@
+index.xml: spellchecker/index.xml
+	cp -f $< $@
 
-voikko-fi_FI.pro: $(GTCORE)/scripts/voikko-fi_FI.pro.template
-	sed -e "s/GTLANG2/$(GTLANG2)/" < $< > $@
+voikko-fi_FI.pro: spellchecker/voikko-fi_FI.pro
+	cp -f $< $@
 
 acceptor.default.hfst: dictionary.default.hfst
 	$(HFST_FST2FST) $(HFST_FLAGS) -f olw $< -o $@
