--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 ## Process this file with autoconf to produce configure script
 
-## Copyright (C) 2011 Samediggi
+## Copyright (C) 2011 Samediggi/Divvun/UiT
 
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -15,49 +15,64 @@
 ## You should have received a copy of the GNU General Public License
 ## along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-# These need to be always written:
+# Following things just need to be at top of all configure.ac files:
+
+# AC_INIT sets up project metadata:
+# first field the name of the "software"
+# second field is version identifie iso 8901 date is good if you have no other
+#   versioining schemes in mind
+# third is email address for bug reports
+# fourth is name of packages made by make dist, excluding .tar.gz
+# fifth is the project web address
 AC_INIT([gtlangs-fao], [20110617], [bugs@divvun.no], [gtlangs-fao],
         [http://divvun.no])
+# AC_REVISION is used to get SVN revision into bug reports
 AC_REVISION([$Revision$])
+# These configuration dirs hide some extra cruft
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
+# AM_INIT_AUTOMAKE sets up make conventions
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
-# set all language codes:
-# GTLANG is the name of the directory under gtlangs
-AC_SUBST([GTLANG], [fao])
-# GTLANG2 is the shortest unambiguous language code used with e.g. spelling
-AC_SUBST([GTLANG2], [fo])
-# language code from ISO 639-1 if available
-AC_SUBST([GT_639_1], [fo])
-# language code from ISO 639-2 (or 3)
-AC_SUBST([GT_639_2], [fao])
 
-# will be GT_PROG_SCRIPTS_PATHS:
+# Following Giellatekno specific variables are used to make external software
+# work; HFST analysers, spell-checkers and so on. These also control
+# some temporary file names etc.
+
+# GTLANG is the language code used to identify this project; it should be same
+# as the directory name in gtsvn and same as ISO 639 three-letter code for the
+# language if possible
+AC_SUBST([GTLANG], [fao])
+# GTLANG2 is the shortest unambiguous language code for this project; it
+# should be the ISO 639-1 two-letter code if possible, otherwise usually same
+# as above
+AC_SUBST([GTLANG2], [fo])
+
+# Tests and sets up giellatekno directories and scripts
 gt_PROG_SCRIPTS_PATHS
 
 
-# check and setup HFST
+# Tests and sets up HFST
 gt_PROG_HFST
 gt_PROG_HFST_PATH
 
-# check and setup xfst
+# Tests and sets up XFST
 gt_PROG_XFST
 
-# check and setup vislcg3
+# Tests and sets up vislcg3
 gt_PROG_VISLCG3
 
-# allow enabling and disabling hfst and xfst
+# Adds --enable/disable-hfst and -xfst
 gt_ENABLE_TOOLKITS
 
-# allow enabling and disabling parts of automata
+# Adds --enable/disable-morphology, -speller, -hyphenation, etc.
 gt_ENABLE_TARGETS
 
-# will be GT_CONFIG_FILES =:
+# List all directories that are used in this project and have automake-style
+# Makefiles
 AC_CONFIG_FILES([Makefile src/Makefile src/morphology/Makefile src/orthography/Makefile src/phonology/Makefile src/spellchecker/Makefile src/syntax/Makefile doc/Makefile])
 
-# must retain as-is
+# This must be near the end of all configure.ac files:
 AC_OUTPUT
 
-#will be GT_PRINT_FOOTER =:
+# Prints the informative blurb at the end of ./configure command
 gt_PRINT_FOOTER
-
