A lot of cleanup and corrections: * suffix rules in more places (although not in all - that is not possible) * removed automake warning about pattern rules - we need them * checked all *-include.am files for consistency, added missing Xerox and HFST targets were needed, corrected vars to HFST tools, added comments and generally made the files easier to maintain (I hope).
More is coming...

--- a/am-shared/regex-include.am
+++ b/am-shared/regex-include.am
@@ -15,26 +15,34 @@
 ## You should have received a copy of the GNU General Public License
 ## along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
+####### Source file defs: ########
+
 # need to check way to list build targets like automake
 #! @param GT_REGEX_SRCS required, list all regular expressions used
 EXTRA_DIST=$(GT_REGEX_SRCS)
+
+####### Automake targets: ########
+
 # @param GT_REGEX_TARGETS required
 noinst_DATA=$(GT_REGEX_TARGETS)
 
-# other twolc targets should be built by suffix rules;
-# just list them in some nice automake targets and you're good to go
-%.hfst: %.regex
-	$(HREGEX) $(HFSTFLAGS) -o $@ -i $<
+####### HFST build rules: ########
+
+.regex.hfst:
+	$(HFST_REGEXP2FST) $(HFSTFLAGS) -o $@ -i $<
 
 # foma needs a script to read regex file
-%.foma: %.regex
+.regex.foma:
 	printf "read regex @\"$<\"\nsave stack $@" | $(XFST) $(XFSTFLAGS)
 
+####### Xerox build rules: #######
+
 # xfst needs a script to read regex file
-%.xfst: %.regex
+.regex.xfst:
 	$(PRINTF) "read regex @\"$<\";\nsave stack $@\nquit\n" |\
 		$(XFST) $(XFSTFLAGS)
 
+####### Other targets: ###########
 clean-local:
 	-rm -f *.hfst *.ol
 
