--- a/src/orthography/Makefile.am
+++ b/src/orthography/Makefile.am
@@ -2,6 +2,7 @@
 ## Copyright: Sámediggi/Divvun/UiT
 ## Licence: GPL v3+
 
-GT_UPPERCASINGS=inituppercase.regex allcaps.regex
+# set this to names of available upper casing rules in regex and xfst format
+GT_UPPERCASING=inituppercase.regex allcaps.xfstscript
 
 include $(top_srcdir)/am-shared/uppercase-include.am
