--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@
 ## Licence: GPL v3+
 
 # order is always . last here
-SUBDIRS = phonology morphology orthography syntax spellchecker .
+SUBDIRS = phonology morphology orthography syntax filters .
 
 include $(top_srcdir)/am-shared/topdir-include.am
 
