Reorganised the test dir, in anticipation of a larger set of tools and source types in need of testing. Merge from the template.
NB! Please note that the new structure requires that you run ./autogen.sh + ./configure before running make/make check!!! This is needed to update the generated makefiles, and their knowledge of the new structure.

--- a/configure.ac
+++ b/configure.ac
@@ -75,10 +75,12 @@ AC_CONFIG_FILES([Makefile \
                 src/syntax/Makefile \
                 doc/Makefile \
                 test/Makefile \
-                test/morphology/Makefile \
-                test/phonology/Makefile \
-                test/spellchecker/Makefile \
-                test/syntax/Makefile \
+                test/src/Makefile \
+                test/src/morphology/Makefile \
+                test/src/phonology/Makefile \
+                test/src/syntax/Makefile \
+                test/tools/Makefile \
+                test/tools/spellcheckers/Makefile \
                 tools/Makefile \
                 tools/spellcheckers/Makefile \
                 tools/spellcheckers/hfst/Makefile])
