Added support for transcribing transducers, ie transducers that change the input from one orthographical representation to another, e.g. date and time expressions as strings or digits to the opposite form.
Merge from template.

--- a/configure.ac
+++ b/configure.ac
@@ -73,6 +73,7 @@ AC_CONFIG_FILES([Makefile \
                 src/phonetics/Makefile \
                 src/phonology/Makefile \
                 src/syntax/Makefile \
+                src/transcriptions/Makefile \
                 doc/Makefile \
                 test/Makefile \
                 test/src/Makefile \
