Added basic setup for running YAML tests in the test/src/morphology/ dir. The default setup will run all *.yaml files found in this dir, but this can be modified in the shell (*.sh.in) script. If there are yaml files in that dir, they will be automatically run by 'make check'.
Merge from the template.

--- a/configure.ac
+++ b/configure.ac
@@ -109,7 +109,8 @@ AC_CONFIG_FILES([Makefile \
                 test/tools/spellcheckers/Makefile \
                 tools/Makefile \
                 tools/spellcheckers/Makefile \
-                tools/spellcheckers/hfst/Makefile])
+                tools/spellcheckers/hfst/Makefile],
+      [chmod +x test/src/morphology/test-yaml-testcases.sh])
 
 # This must be near the end of all configure.ac files:
 AC_OUTPUT
