Corrected error in previous commit. Finally things are working as they should. It might be necessary to run ./autogen.sh and ./configure before compilation is running smoothly again.

--- a/configure.ac
+++ b/configure.ac
@@ -103,6 +103,7 @@ AC_CONFIG_FILES([Makefile \
                 test/Makefile \
                 test/src/Makefile \
                 test/src/morphology/Makefile \
+                test/src/morphology/run-yaml-testcases.sh \
                 test/src/phonology/Makefile \
                 test/src/syntax/Makefile \
                 test/tools/Makefile \
@@ -110,7 +111,7 @@ AC_CONFIG_FILES([Makefile \
                 tools/Makefile \
                 tools/spellcheckers/Makefile \
                 tools/spellcheckers/hfst/Makefile],
-      [chmod +x run/src/morphology/test-yaml-testcases.sh])
+      [chmod +x test/src/morphology/run-yaml-testcases.sh])
 
 # This must be near the end of all configure.ac files:
 AC_OUTPUT
