Several testing shell script updates: correct exit value when data files are not found, proper use of Autoconf-made variables (will free the test scripts from relying on the user setting up environment variables), and better checks on the availability of test data for the lemma and replaced all hard-coded file refs with variables in the noun generation test.
Update from template.

--- a/configure.ac
+++ b/configure.ac
@@ -113,6 +113,8 @@ AC_CONFIG_FILES([Makefile \
 # the most pleasant user experience and most readable autoconf code to maintain.
 AC_CONFIG_FILES([test/src/morphology/run-yaml-testcases.sh], \
       [chmod a+x test/src/morphology/run-yaml-testcases.sh])
+AC_CONFIG_FILES([test/src/morphology/generate-noun-lemmas.sh], \
+      [chmod a+x test/src/morphology/generate-noun-lemmas.sh])
 
 # This must be near the end of all configure.ac files:
 AC_OUTPUT
