Updated the source file names to the renamed files.

--- a/src/morphology/Makefile.am
+++ b/src/morphology/Makefile.am
@@ -19,25 +19,25 @@ GT_LEXC_ROOT=root.lexc
 
 # Set this to the names of all other source lexc files
 GT_LEXC_SRCS=\
-			 stems/abbr.lexc \
-			 stems/acro.lexc \
-			 stems/adj.lexc \
-			 stems/adv.lexc \
-			 stems/cc.lexc \
-			 stems/cs.lexc \
-			 stems/det.lexc \
-			 stems/interj.lexc \
-			 stems/noun.lexc \
-			 stems/numeral.lexc \
-			 stems/pp.lexc \
-			 stems/pron.lexc \
-			 stems/propernoun.lexc \
-			 stems/punct.lexc \
-			 stems/verb.lexc \
-			 affixes/adj.lexc \
-			 affixes/noun.lexc \
-			 affixes/propernoun.lexc \
-			 affixes/verb.lexc
+			 affixes/adjectives.lexc  \
+			 affixes/nouns.lexc       \
+			 affixes/propernouns.lexc \
+			 affixes/verbs.lexc       \
+			 stems/abbreviations.lexc \
+			 stems/acronyms.lexc      \
+			 stems/adjectives.lexc    \
+			 stems/adpositions.lexc   \
+			 stems/adverbs.lexc       \
+			 stems/conjunctions.lexc  \
+			 stems/determiners.lexc   \
+			 stems/interjections.lexc \
+			 stems/nouns.lexc         \
+			 stems/numerals.lexc      \
+			 stems/pronouns.lexc      \
+			 stems/propernouns.lexc   \
+			 stems/punctuation.lexc   \
+			 stems/subjunctions.lexc  \
+			 stems/verbs.lexc
 
 # Set this to the names of all generated lexc files, if any
 GENERATED_LEXC_SRCS=
