--- a/am-shared/regex-include.am
+++ b/am-shared/regex-include.am
@@ -29,17 +29,18 @@ noinst_DATA=$(GT_REGEX_TARGETS)
 ####### HFST build rules: ########
 
 .regex.hfst:
-	$(HFST_REGEXP2FST) $(HFSTFLAGS) -o $@ -i $<
+	$(AM_V_GEN)$(HFST_REGEXP2FST) $(HFSTFLAGS) -o $@ -i $<
 
 # foma needs a script to read regex file
 .regex.foma:
-	printf "read regex @\"$<\"\nsave stack $@" | $(XFST) $(XFSTFLAGS)
+	$(AM_V_GEN)$(PRINTF) "read regex @\"$<\"\nsave stack $@" \
+		| $(XFST) $(XFSTFLAGS)
 
 ####### Xerox build rules: #######
 
 # xfst needs a script to read regex file
 .regex.xfst:
-	$(PRINTF) "read regex @\"$<\";\nsave stack $@\nquit\n" |\
+	$(AM_V_GEN)$(PRINTF) "read regex @\"$<\";\nsave stack $@\nquit\n" |\
 		$(XFST) $(XFSTFLAGS)
 
 ####### Other targets: ###########
