Call saxon checks from confugre. In previous commit: Ubuntu version of xml2lexc with autostuff. Template update.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@65005 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/configure.ac
+++ b/configure.ac
@@ -88,6 +88,10 @@ gt_PROG_XFST
 # Tests and sets up vislcg3
 gt_PROG_VISLCG3
 
+# Tests and sets up XML to lexc conversion
+gt_PROG_SAXON
+
+
 # List all non-script files processed by Autoconf.
 AC_CONFIG_FILES([Makefile \
                  src/Makefile \
