* Added initial support for extracting documentation from comments in the source code. Only jspwiki supported initially. * Also added initial support for extracting test data from source code comments. Only yaml tests in lexc is supported initially.
Template update.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -2,5 +2,46 @@
 ## Copyright: Sámediggi/Divvun/UiT
 ## Licence: GPL v3+
 
+# Old doc:
 # e.g. install as-is
-doc_DATA=fao-testdiary.xml index.xml site-frag.xml tabs-frag.xml
+#doc_DATA=fao-testdiary.xml index.xml site-frag.xml tabs-frag.xml
+
+# List all jspwiki files that should be created from source files in the
+# JSP_PAGES variable. The filename pattern is as follows:
+#
+# dir/filename.lexc => filename-dir.jspwiki
+
+if CAN_DOCC
+
+JSP_PAGES=root-morphology.jspwiki
+# clitics-morphology.jspwiki       \
+# compounding-morphology.jspwiki   \
+# abbreviations-stems.jspwiki      \
+# acronyms-stems.jspwiki           \
+# adjectives-oahpa-stems.jspwiki   \
+# adjectives-stems.jspwiki         \
+# adpositions-stems.jspwiki        \
+# adverbs-stems.jspwiki            \
+# conjunctions-stems.jspwiki       \
+# interjections-stems.jspwiki      \
+# nouns-oahpa-stems.jspwiki        \
+# nouns-stems.jspwiki              \
+# numerals-stems.jspwiki           \
+# particles-stems.jspwiki          \
+# pronouns-stems.jspwiki           \
+# propernouns-stems.jspwiki        \
+# punctuation-stems.jspwiki        \
+# smi-propernouns-stems.jspwiki    \
+# subjunctions-stems.jspwiki       \
+# verbs-stems.jspwiki              \
+# adjectives-oahpa-affixes.jspwiki \
+# adjectives-affixes.jspwiki       \
+# nouns-affixes.jspwiki            \
+# propernouns-affixes.jspwiki      \
+# verbs-affixes.jspwiki
+
+ALLINONE_JSP_PAGE=$(GTLANG).jspwiki
+
+endif # CAN_DOCC
+
+include $(top_srcdir)/am-shared/doc-include.am
