Added support for automatically building a file with links to each individual jspwiki file generated based. Template update.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -42,6 +42,8 @@ JSP_PAGES=root-morphology.jspwiki
 
 ALLINONE_JSP_PAGE=$(GTLANG).jspwiki
 
+LINKS=Links.jspwiki
+
 endif # CAN_DOCC
 
 include $(top_srcdir)/am-shared/doc-include.am
