Added a tagset directory in preparation for generating Apertium transducers automatically. Corrected and expanded a few M4 macros for the hfst tools. Template update.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@77278 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/configure.ac
+++ b/configure.ac
@@ -125,6 +125,7 @@ AC_CONFIG_FILES([Makefile \
                  src/phonetics/Makefile \
                  src/phonology/Makefile \
                  src/syntax/Makefile \
+                 src/tagsets/Makefile \
                  src/transcriptions/Makefile \
                  doc/Makefile \
                  test/Makefile \
