Added ref to twolc documentation file.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -13,7 +13,8 @@
 
 if CAN_DOCC
 
-JSP_PAGES=root-morphology.jspwiki
+JSP_PAGES=root-morphology.jspwiki  \
+		  fao-phon-phonology.jspwiki
 # clitics-morphology.jspwiki       \
 # compounding-morphology.jspwiki   \
 # abbreviations-stems.jspwiki      \
