If we have dependency, we want to compile it. This should be part of the general targetn.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@80359 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/syntax/Makefile.am
+++ b/src/syntax/Makefile.am
@@ -9,6 +9,6 @@ GT_DEPENDENCY=dependency.cg3
 GT_DISAMBIGUATION=disambiguation.cg3
 
 # set this to names of cg3 binaries 
-GT_CG_TARGETS=disambiguation.bin
+GT_CG_TARGETS=disambiguation.bin dependency.bin
 
 include $(top_srcdir)/am-shared/syntax-include.am
