[template merge] Changed the order of the configure macros, to allow for testing for program availability when checking the enable options.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@81861 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/configure.ac
+++ b/configure.ac
@@ -86,9 +86,6 @@ AC_SUBST([GTLANG], [fao])
 # as above
 AC_SUBST([GTLANG2], [fo])
 
-# Adds --enable/disable-morphology, -speller, -hyphenation, etc.
-gt_ENABLE_TARGETS
-
 # Tests and sets up giellatekno directories and scripts
 gt_PROG_SCRIPTS_PATHS
 
@@ -118,6 +115,11 @@ AS_IF([test "x$AWK" != x], [
 ],[gt_prog_docc=no])
 AC_MSG_RESULT([$gt_prog_docc])
 AM_CONDITIONAL([CAN_DOCC], [test "x$gt_prog_docc" != xno])
+
+# Adds --enable/disable-morphology, -speller, -hyphenation, etc.
+# This should be the last step so that all program variables are available
+# to the enable checks
+gt_ENABLE_TARGETS
 
 # List all non-script files processed by Autoconf.
 AC_CONFIG_FILES([Makefile \
