[Template merke - und] The first lookup shell script added, with supporting infrastructure. Part 1 - no actual shell script, no Makefile. Comming in the next commit. NB! Right now making and building will break, sorry for the inconvenience.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@82264 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/configure.ac
+++ b/configure.ac
@@ -143,6 +143,7 @@ AC_CONFIG_FILES([Makefile \
                  test/tools/spellcheckers/Makefile \
                  tools/Makefile \
                  tools/grammarcheckers/Makefile \
+                 tools/shellscripts/Makefile \
                  tools/spellcheckers/Makefile \
                  tools/spellcheckers/fstbased/Makefile \
                  tools/spellcheckers/fstbased/hfst/Makefile \
@@ -154,6 +155,8 @@ AC_CONFIG_FILES([test/src/morphology/run-morph-tester.sh], \
       [chmod a+x test/src/morphology/run-morph-tester.sh])
 AC_CONFIG_FILES([test/src/morphology/generate-noun-lemmas.sh], \
       [chmod a+x test/src/morphology/generate-noun-lemmas.sh])
+AC_CONFIG_FILES([tools/shellscripts/ufao-gt.sh], \
+      [chmod a+x tools/shellscripts/ufao-gt.sh])
 
 # This must be near the end of all configure.ac files:
 AC_OUTPUT
