--- a/configure.ac
+++ b/configure.ac
@@ -46,6 +46,10 @@ AM_INIT_AUTOMAKE(
 )
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
+### This is the version of the GTD core that we require. Update as needed.
+### It is possible to specify also subversion revision: 0.1.2-12345
+required_gtd_core_version=0.1.0
+
 # Some software that we either depend on or we need for certain functionality:
 
 AC_ARG_ENABLE([yamltests],
